[REV]Update service’s plugin setting with build_version
[FIX]Repair few annotation bugs
