# hack/contrib/docker/api/html/swagger.json
@@ -1620,14 +1620,6 @@
                   "type": "string",
                   "x-go-name": "BuildModel"
                 },
-                "env_info": {
-                  "description": "in: body",
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/definitions/PluginDefaultENV"
-                  },
-                  "x-go-name": "EVNInfo"
-                },
                 "git_url": {
                   "description": "git地址\nin: body",
                   "type": "string",
@@ -2069,7 +2061,7 @@
         }
       }
     },
-    "/v2/tenants/{tenant_name}/plugin/{plugin_id}/default-env": {
+    "/v2/tenants/{tenant_name}/plugin/{plugin_id}/{version_id}/default-env": {
       "get": {
         "description": "get plugin env",
         "consumes": [
@@ -2129,6 +2121,7 @@
           {
             "type": "string",
             "x-go-name": "TenantName",
+            "description": "租户名称",
             "name": "tenant_name",
             "in": "path",
             "required": true
@@ -2136,7 +2129,16 @@
           {
             "type": "string",
             "x-go-name": "PluginID",
+            "description": "插件id",
             "name": "plugin_id",
+            "in": "path",
+            "required": true
+          },
+          {
+            "type": "string",
+            "x-go-name": "VersionID",
+            "description": "构建版本",
+            "name": "version_id",
             "in": "path",
             "required": true
           },
@@ -2188,6 +2190,7 @@
           {
             "type": "string",
             "x-go-name": "TenantName",
+            "description": "租户名称",
             "name": "tenant_name",
             "in": "path",
             "required": true
@@ -2195,7 +2198,16 @@
           {
             "type": "string",
             "x-go-name": "PluginID",
+            "description": "插件id",
             "name": "plugin_id",
+            "in": "path",
+            "required": true
+          },
+          {
+            "type": "string",
+            "x-go-name": "VersionID",
+            "description": "构建版本",
+            "name": "version_id",
             "in": "path",
             "required": true
           },
@@ -2229,7 +2241,7 @@
         }
       }
     },
-    "/v2/tenants/{tenant_name}/plugin/{plugin_id}/default-env/{env_name}": {
+    "/v2/tenants/{tenant_name}/plugin/{plugin_id}/{version_id}/default-env/{env_name}": {
       "delete": {
         "description": "delete default env",
         "consumes": [
@@ -2249,6 +2261,7 @@
           {
             "type": "string",
             "x-go-name": "TenantName",
+            "description": "租户名称",
             "name": "tenant_name",
             "in": "path",
             "required": true
@@ -2256,7 +2269,16 @@
           {
             "type": "string",
             "x-go-name": "PluginID",
+            "description": "插件id",
             "name": "plugin_id",
+            "in": "path",
+            "required": true
+          },
+          {
+            "type": "string",
+            "x-go-name": "VersionID",
+            "description": "构建版本",
+            "name": "version_id",
             "in": "path",
             "required": true
           },
@@ -6659,29 +6681,36 @@
       "description": "PluginDefaultENV 插件默认环境变量",
       "type": "object",
       "required": [
+        "plugin_id",
+        "version_id",
         "env_name",
         "env_value"
       ],
       "properties": {
         "env_name": {
-          "description": "配置项名称\nin: path",
+          "description": "配置项名称\nin: body",
           "type": "string",
           "x-go-name": "ENVName"
         },
         "env_value": {
-          "description": "配置项值\nin: path",
+          "description": "配置项值\nin: body",
           "type": "string",
           "x-go-name": "ENVValue"
         },
         "is_change": {
-          "description": "是否可以被使用者修改\nin :path",
+          "description": "是否可以被使用者修改\nin :body",
           "type": "boolean",
           "x-go-name": "IsChange"
         },
         "plugin_id": {
-          "description": "对应插件id\nin: path",
+          "description": "对应插件id\nin: body",
           "type": "string",
           "x-go-name": "PluginID"
+        },
+        "version_id": {
+          "description": "构建版本id\nin: body",
+          "type": "string",
+          "x-go-name": "VersionID"
         }
       },
       "x-go-package": "github.com/goodrain/rainbond/pkg/api/model"
